se agrego expres y el servidor de este

--- a/javaScript/css/style.css
+++ b/javaScript/css/style.css
@@ -1,15 +1,15 @@
 .text {
   background-color: white;
-  text-decoration-color: black;
+  color: black;
 }
 
 .text2 {
   background-color: black;
-  text-decoration-color: white;
+  color: white;
 }
 .text3 {
   background-color: cornflowerblue;
-  text-decoration-color: rgb(185, 1, 1);
+  color: rgb(185, 1, 1);
 }
 
 #modal {
